# aidaw-desktop

./: .gitignore  .gitmodules  CMakeLists.txt  Eddie_plan.txt  README.md
.claude/: settings.local.json
Samples/Wave Texture Deep House Sample Pack Vol I/FX/fL Sessions/Drum Loop Creation/: Drum Loop Creation.flp  Synth Loop Creations.flp
Samples/Wave Texture Deep House Sample Pack Vol I/FX/fL Sessions/Drum Loop Creation/Backup/: Drum Loop Creation (autosaved at 10h03).flp  Drum Loop Creation (overwritten at 10h06).flp  Drum Loop Creation (overwritten at 10h07).flp  Drum Loop Creation (overwritten at 9h28).flp  Drum Loop Creation (overwritten at 9h30).flp  Drum Loop Creation (overwritten at 9h36).flp  Drum Loop Creation (overwritten at 9h38).flp  Drum Loop Creation (overwritten at 9h40).flp  Drum Loop Creation (overwritten at 9h41).flp  Drum Loop Creation (overwritten at 9h44).flp  Drum Loop Creation (overwritten at 9h45).flp  Drum Loop Creation (overwritten at 9h45)_2.flp  Drum Loop Creation (overwritten at 9h46).flp  Drum Loop Creation (overwritten at 9h47).flp  Drum Loop Creation (overwritten at 9h48).flp  Drum Loop Creation (overwritten at 9h49).flp  Drum Loop Creation (overwritten at 9h51).flp  Drum Loop Creation (overwritten at 9h52).flp  Drum Loop Creation (overwritten at 9h53).flp  Synth Loop Creations (autosaved at 10h17).flp  Synth Loop Creations (autosaved at 10h49).flp  Synth Loop Creations (overwritten at 10h22).flp  Synth Loop Creations (overwritten at 10h29).flp  Synth Loop Creations (overwritten at 10h31).flp  Synth Loop Creations (overwritten at 10h36).flp  Synth Loop Creations (overwritten at 10h37).flp  Synth Loop Creations (overwritten at 10h56).flp  Synth Loop Creations (overwritten at 11h02).flp  Synth Loop Creations (overwritten at 11h05).flp  Synth Loop Creations (overwritten at 11h08).flp  Synth Loop Creations (overwritten at 11h10).flp  Synth Loop Creations (overwritten at 11h11).flp  Synth Loop Creations (overwritten at 11h11)_2.flp  Synth Loop Creations (overwritten at 11h13).flp  Synth Loop Creations (overwritten at 11h14).flp  Synth Loop Creations (overwritten at 11h14)_2.flp  Synth Loop Creations (overwritten at 11h14)_3.flp  Synth Loop Creations (overwritten at 11h15).flp  Synth Loop Creations (overwritten at 11h15)_2.flp  Synth Loop Creations (overwritten at 11h15)_3.flp  (+13 more)
apps/AIDAW/Source/: Main.cpp
apps/AIDAW/Source/app/: MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h
apps/AIDAW/Source/audio/: EddieSynth.cpp  EddieSynth.h  MetronomeSource.cpp  MetronomeSource.h  TimelineAudioSource.cpp  TimelineAudioSource.h
apps/AIDAW/Source/ui/: Arranger.cpp  Arranger.h  ArrangerCanvas.cpp  ArrangerCanvas.h  ClipComponent.cpp  ClipComponent.h  LoopsModal.h  LoopsRegistry.h  MidiEditor.cpp  MidiEditor.h  Theme.h  ThumbCache.h  TopBar.cpp  TopBar.h  TrackLaneComponent.cpp  TrackLaneComponent.h
apps/AIDAW/Source/ui/arranger/: Arranger.cpp  Arranger.h  ArrangerCanvas.cpp  ArrangerCanvas.h  ArrangerFileUtils.cpp  ArrangerFileUtils.h  ArrangerHeaderStrip.cpp  ArrangerHeaderStrip.h  ClipComponent.cpp  ClipComponent.h  TrackLaneComponent.cpp  TrackLaneComponent.h
apps/AIDAW/Source/ui/loops/: LoopsModal.h  LoopsRegistry.h
apps/AIDAW/Source/ui/midi/: MidiEditor.cpp  MidiEditor.h  MidiEditorNoteComponent.cpp  MidiNote.h
apps/AIDAW/Source/ui/mixer/: MixerComponent.h
apps/AIDAW/Source/ui/samples/: SampleBrowser.cpp  SampleBrowser.h  SamplePreviewSource.cpp  SamplePreviewSource.h
apps/AIDAW/Source/ui/shared/: AIDAWLook.h  Icons.h  Models.h  Theme.h  ThemeManager.h
apps/AIDAW/Source/ui/shell/: TopBar.cpp  TopBar.h
apps/AIDAW/Source/ui/synth/: EddieSynthPanel.cpp  EddieSynthPanel.h
